RESOLVED FIXED274051
SVG non-rendered elements (display: none) should not get 'focus' despite tabindex
https://bugs.webkit.org/show_bug.cgi?id=274051
Summary SVG non-rendered elements (display: none) should not get 'focus' despite tabi...
Ahmad Saleem
Reported 2024-05-12 04:15:43 PDT
SSIA
Attachments
EWS
Comment 1 2024-05-13 10:04:24 PDT
Committed 278694@main (7d5909d30977): <https://commits.webkit.org/278694@main> Reviewed commits have been landed. Closing PR #28442 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-05-13 10:05:19 PDT
Note You need to log in before you can comment on or make changes to this bug.