SVG non-rendered elements should not get 'focus' despite tabindex

https://bugs.webkit.org/show_bug.cgi?id=274051

Reviewed by Simon Fraser.

As per SVG2 specification [1]:

"A non-rendered element can never receive focus, regardless of the value of the ‘tabindex’
attribute, If a script programmatically assigns focus to a non-rendered or otherwise un
focusable element, the focusing call is aborted..."

[1] https://svgwg.org/svg2-draft/interact.html#Focus

This patch is to extend the 'supportFocus()' as false to such elements.

* Source/WebCore/svg/SVGDescElement.h:
* Source/WebCore/svg/SVGLinearGradientElement.h:
* Source/WebCore/svg/SVGMarkerElement.h:
* Source/WebCore/svg/SVGMaskElement.h:
* Source/WebCore/svg/SVGMetadataElement.h:
* Source/WebCore/svg/SVGPatternElement.h:
* Source/WebCore/svg/SVGRadialGradientElement.h:
* Source/WebCore/svg/SVGScriptElement.h:
* Source/WebCore/svg/SVGStyleElement.h:
* Source/WebCore/svg/SVGSymbolElement.h:
* Source/WebCore/svg/SVGTitleElement.h:
* LayoutTests/imported/w3c/web-platform-tests/svg/struct/scripted/autofocus-attribute-expected.txt:
* LayoutTests/svg/custom/tabindex-order-expected.txt:

Canonical link: https://commits.webkit.org/278694@main