Source/WebCore/svg/SVGScriptElement.h
@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 2004, 2005, 2008 Nikolas Zimmermann <zimmermann@kde.org>
  * Copyright (C) 2004, 2005, 2007 Rob Buis <buis@kde.org>
- * Copyright (C) 2008-2018 Apple Inc. All rights reserved.
+ * Copyright (C) 2008-2024 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -53,6 +53,7 @@ private:
 
     Ref<Element> cloneElementWithoutAttributesAndChildren(Document&) final;
     bool rendererIsNeeded(const RenderStyle&) final { return false; }
+    bool supportsFocus() const final { return false; }
 
     // ScriptElement
     String sourceAttributeValue() const final { return href(); }
